Archive2/70/f0f718ab7c3274/output
main.cpp: In function 'int main()':
main.cpp:42:41: error: 'type' is not a member of 'requirements<EqualityComparable<int> >'
     all_of<expr<bool>, expr<bool>> {} = requirements<EqualityComparable<int>>::type {};
                                         ^
main.cpp:45:39: error: 'type' is not a member of 'requirements<EqualityComparable<pathological&> >'
     all_of<expr<int>, expr<int>> {} = requirements<EqualityComparable<pathological&>>::type {};
                                       ^
main.cpp:48:5: error: 'type' is not a member of 'requirements<EqualityComparable<pathological> >'
     requirements<EqualityComparable<pathological>>::type {};
     ^
